adding index.html as a route

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,11 +13,11 @@
     </head>
 
     <body>
-
-        <ul id="message"></ul>
-        <input type="text"></input>
-        <button id="btn" type="submit">Click</button>
-
+        <main>
+            {% block main %}
+            {% end block %}
+        </main>
+        
     </body>
 
 </html>
